<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/euro_text" />

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/introducir_cantidad"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:focusable="false"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonYuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yuan" />

                <RadioButton
                    android:id="@+id/radioButtonDolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dolar" />

                <RadioButton
                    android:id="@+id/radioButtonLibra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/libra" />

                <RadioButton
                    android:id="@+id/radioButtonYen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yen" />
            </RadioGroup>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/resultado"

                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button1"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/uno"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/button2"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/dos"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/button3"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/tres"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button4"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cuatro"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/button5"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cinco"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/button6"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/seis"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button7"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/siete"
                            android:layout_margin="5dp"/>

                        <Button
                            android:id="@+id/button8"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/ocho"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/button9"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/nueve"
                            android:layout_margin="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button10"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/zero"
                            android:layout_margin="5dp"/>

                        <Button
                            android:id="@+id/button19"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text=""
                            android:visibility="invisible" />

                        <Button
                            android:id="@+id/button11"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/coma"
                            android:layout_margin="5dp"
                            style="?android:attr/buttonBarButtonStyle"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="9">

                    <Button
                        android:id="@+id/button12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ce"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/button13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atras"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/button14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/igual"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/button26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:visibility="invisible"
                        android:layout_margin="5dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>